# erpnext16_expense

./: .gitignore  pyproject.toml
expenses/: hooks.py  install.py  patches.txt
expenses/expenses/doctype/expense_entry/: expense_entry.js  expense_entry.json  expense_entry.py  test_expense_entry.py
expenses/expenses/doctype/expense_entry_item/: expense_entry_item.json
expenses/expenses/report/expense_register/: expense_register.js  expense_register.json  expense_register.py
expenses/patches/v1_0/: remove_legacy_doctypes.py
expenses/public/css/: expense_report.css  expenses.css
expenses/setup/: print_formats.py  print_templates.py  workspaces.py
expenses/translations/: ar.csv
