[project]
name = "expenses"
authors = [{ name = "efeone Pvt Ltd", email = "info@efeone.com" }]
description = "Simple expense entry for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
